# web3

./: .env.backup.20251119_142008  .env.backup.20251121_091946  .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  BINANCE_EVENT_CONTRACT_INTEGRATION_SUMMARY.md  FINAL_SUMMARY.md  HYBRID_ARCHITECTURE_CHECKLIST.md  MULTI_COIN_TRADING_GUIDE.md  PROJECT_STRUCTURE.md  PYTHON_ENV_ANALYSIS.md  QUICK_START.md  README.md  SAFE_CLEANUP_GUIDE.md  SECURITY_ANALYSIS.md  SECURITY_SUMMARY.md  WEB3_PROJECT_OPTIMIZATION.md  backup_sensitive_to_vps.sh  deploy_manual.sh  deploy_to_new_server.sh  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  start_6551_kline_monitor.js  start_6551_monitor.js  start_trading.sh  stop_trading.sh  transfer_sensitive_files.sh  turbo.json  verification.md
apps/rust-trading-bot/: .docs_summary  .env.example  .gitignore  AI_CLIENTS_README.md  AI_DYNAMIC_TAKE_PROFIT_IMPLEMENTATION.md  AI_PROMPTS.md  AI_PROMPTS_V2.md  B1_COMPLETE_REPORT.md  B1_FINAL_SUCCESS.md  B1_SUCCESS_REPORT.md  BEAT_ANALYSIS.md  BLOCKCHAIN_WALLETS.md  CHECK_BALANCE_GUIDE.md  CLEANUP_SUMMARY.md  CLIPPY_STRATEGY.md  COMPREHENSIVE_REFACTOR_PLAN.md  Cargo.toml  DAEMON_SETUP.md  DOC_INDEX.md  ENV_SETUP_GUIDE.md  FAPI_MIGRATION.md  FINAL_FIX_COMPLETE.md  FINAL_RECOMMENDATION.md  FLOW_ANALYSIS.md  FOLLOWUP_RECOMMENDATIONS_COMPLETE.md  FULL_FEATURE_COMPARISON.md  FUNCTIONALITY_COMPLETE.md  HTTP_FORWARDING_TEST_SUCCESS.md  HYPERLIQUID_README.md  IMPLEMENTATION_REALITY_CHECK.md  IMPLEMENTATION_SUMMARY.md  INSTALL_MERMAID.md  INTEGRATION_COMPLETE.md  MERMAID_CODES_ONLY.txt  NEW_ARCHITECTURE_RUNNING.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  PHASE_1-6_COMPLETION_REPORT.md  PHASE_COMPLETION_CHECK.md  QUICKSTART.md  (+51 more)
apps/rust-trading-bot/.serena/: project.yml
apps/rust-trading-bot/configs/: 15x_aggressive.env
apps/rust-trading-bot/data/: channel_2254462672_analysis.txt  trading.db.backup.20251109_172858  trading.db.backup.20251124  trading.db.backup_20251113_145824  user_2069693449_history.txt  猎庄一号_messages.json  猎徒V神_messages.json
apps/rust-trading-bot/docs/: ALPHA_FOMO_MONITOR_GUIDE.md  CLEANUP_INTERVAL_UPDATE.md  DEEPSEEK_PROMPT_UPDATE.md  LOG_ANALYSIS_20251104_2232.md  MEMORY_OPTIMIZATION.md  POSITION_MANAGEMENT_SOLUTIONS.md  QUICK_FIX.md  README.md
apps/rust-trading-bot/migrations/: 001_simplify_telegram_signals.sql
apps/rust-trading-bot/scripts/: run_deepseek_gate.sh  run_deepseek_trader.sh  (+3 more)
(+1510 files in other folders)
